--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "apollo-server-express": "^3.13.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "graphql": "^16.9.0",
-    "graphql-upload": "13.0.0"
+    "graphql-upload": "13.0.0",
+    "minio": "^8.0.1"
   }
 }
